--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BC OS: Empower Your Digital Experience</title>
+    <title>MATH Project. Learn Math.</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file for styling -->
     <link rel="icon" type="image/x-icon" href="favicon.ico"> <!-- Link to your favicon.ico file -->
     <style>
@@ -177,12 +177,12 @@
 
     <section id="download">
         <div class="container">
-            <h2>Download BC OS</h2>
-            <p>Get the latest version of BC OS and enhance your computing experience.</p>
+            <h2>Download MATH3, Or MATH4.</h2>
+            <p>Get the Latest Version of MATH</p>
             <a href="download-link" class="btn">Download Now</a>
         </div>
     </section>
-
+    
     <section id="support">
         <div class="container">
             <h2>Support</h2>
