--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
 
         .hero {
             background-color: #0078D4;
-            padding: 200px 0;
+            padding: 100px 0;
             text-align: center;
             color: #fff;
         }
 
         .hero h1 {
-            font-size: 5em;
+            font-size: 4em;
             margin-bottom: 20px;
         }
 
         .hero p {
-            font-size: 1.8em;
-            margin-bottom: 40px;
+            font-size: 1.5em;
+            margin-bottom: 20px;
         }
 
         .btn {
             background-color: #fff;
             color: #0078D4;
-            padding: 20px 40px;
+            padding: 15px 30px;
             border: 2px solid #fff;
             border-radius: 30px;
             text-decoration: none;
@@ -95,44 +95,24 @@
         }
 
         section {
-            padding: 100px 0;
+            padding: 50px 0;
             text-align: center;
         }
 
         section h2 {
             font-size: 3em;
-            margin-bottom: 60px;
+            margin-bottom: 20px;
         }
 
         footer {
             background-color: #333;
             color: #fff;
-            padding: 80px 0;
+            padding: 20px 0;
             text-align: center;
         }
 
         footer p {
-            font-size: 1.5em;
-            margin-bottom: 40px;
-        }
-
-        /* Image Animation */
-        .image-container {
-            position: relative;
-            overflow: hidden;
-            display: inline-block;
-            margin: 20px;
-        }
-
-        .moving-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: transform 0.5s ease;
-        }
-
-        .moving-image:hover {
-            transform: translate(-10px, -10px);
+            font-size: 1.2em;
         }
     </style>
 </head>
@@ -140,69 +120,33 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo.png" alt="BC OS Logo">
+                <img src="logo.png" alt="MATH Project Logo">
             </div>
             <nav>
                 <ul>
-                    <li><a href="home">Home</a></li>
-                    <li><a href="features">Features</a></li>
-                    <li><a href="download">Download</a></li>
-                    <li><a href="support">Support</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="download.html">Download</a></li>
+                    <li><a href="support.html">Support</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section id="home" class="hero">
+    <section id="download" class="hero">
         <div class="container">
-            <h1>The MATH Project</h1>
-            <p></p>
-            <a href="#features" class="btn">Discover More</a>
-        </div>
-    </section>
-
-    <section id="features">
-        <div class="container">
-            <h2>Features</h2>
-            <div class="image-container">
-                <img src="feature1.jpg" alt="Feature 1" class="moving-image">
-            </div>
-            <div class="image-container">
-                <img src="feature2.jpg" alt="Feature 2" class="moving-image">
-            </div>
-            <!-- Add more feature images as needed -->
-        </div>
-    </section>
-
-    <section id="download">
-        <div class="container">
-            <h2>Download MATH3, Or MATH4.</h2>
-            <p>Get the Latest Version of MATH</p>
-            <a href="download-link" class="btn">Download Now</a>
+            <h1>Download MATH Project</h1>
+            <p>Get the latest version of MATH3 or MATH4.</p>
+            <a href="math3.zip" class="btn">Download MATH3</a>
+            <a href="math4.zip" class="btn">Download MATH4</a>
         </div>
     </section>
     
-    <section id="support">
-        <div class="container">
-            <h2>Support</h2>
-            <p>Need help? Visit our support page for FAQs, guides, and more.</p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <!-- Contact Form -->
-        </div>
-    </section>
-
     <footer>
         <div class="container">
-            <p>&copy; 2024 BC OS. All rights reserved.</p>
+            <p>&copy; 2024 MATH Project. All rights reserved.</p>
         </div>
     </footer>
-    
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
