--- a/download.html
+++ b/download.html
@@ -1,3 +1,3 @@
-<a href="/images/myw3schoolsimage.jpg" download>
-  <img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
+<a href="MATH3.sh" download>
+  <img src="MATH3.sh" alt="MATH3 Download">
 </a>
