--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="container">
             <h1>Download MATH Project</h1>
             <p>Get the latest version of MATH3 or MATH4.</p>
-            <a href="math3.sh.x.c" download="math3.exe">Download MATH3</a>
+            <a href="math3.exe" download="math3.exe">Download MATH3 for Windows (Linux Versions coming soon!)</a>
             <a href="math4.zip" class="btn">Download MATH4</a>
         </div>
     </section>
